--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-tag-emojis": "^2.0.1",
+    "hexo-toc": "^1.0.4",
+    "markdown-toc": "^0.13.0"
   }
 }
